--- a/about-me.css
+++ b/about-me.css
@@ -40,7 +40,7 @@ nav{
     margin-top: 50px;
 }
 .sub{
-    margin-top: 30px;
+    margin-top: 100px;
     line-height: 25px;
     display: flex;
     align-items: center;
@@ -72,6 +72,12 @@ img{
     border: solid;
     border-radius: 50%;
     border-color: orange;
+}
+header{
+    position:fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
 }
 footer{
     text-align: center;
